--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,12 @@ input, select {
 p {
     font-size: 18px;
 }
+
+html {
+    scrollbar-color: #9371ab #73548a;
+}
+
+.update-messages {
+    display: inline-block;
+    padding-left: 20px;
+}
