--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 header {
     position: relative;
     text-align: center;
-    padding: 20px 40px 60px; /* extra bottom padding to move button below */
+    padding: 20px 40px 60px;
 }
 
 header h1 {
@@ -17,7 +17,6 @@ header h1 {
     margin: 0;
 }
 
-/* Checkout button on left and slightly below */
 header button {
     position: absolute;
     right: 40px;
@@ -36,8 +35,8 @@ header button:hover {
 }
 
 header button .fa-cart-plus {
-  margin-right: 10px; /* Adjust spacing as needed */
-  margin-left: 5px;
+  margin-right: 5px;
+  margin-left: 1px;
 }
 
 main {
@@ -46,7 +45,6 @@ main {
     padding: 20px;
 }
 
-/* Two lessons side by side */
 .lesson-container {
     display: flex;
     justify-content: center;
@@ -54,7 +52,6 @@ main {
     flex-wrap: wrap;
 }
 
-/* Lesson box style (square look) */
 .lesson-box {
     background-color: #ffffff33;
     border-radius: 15px;
@@ -71,7 +68,6 @@ main {
     border-radius: 10px;
 }
 
-/* Buttons */
 button {
     background-color: #ffffff;
     color: #9371ab;
@@ -89,7 +85,6 @@ button:disabled {
     cursor: not-allowed;
 }
 
-/* Form Elements */
 input, select {
     padding: 8px;
     border-radius: 5px;
@@ -109,4 +104,25 @@ html {
 .update-messages {
     display: inline-block;
     padding-left: 20px;
+}
+
+.checkout-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.checkout-container h2 {
+    text-align: center;
+}
+
+.checkout-details, .order-info {
+    flex: 1;
+    height: 240px;
+    padding: 15px;
+    border-radius: 8px;
+    background-color: #9371ab;
+    box-shadow: 0px 4px 8px #00000033;
 }
